# je-201

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
JUCEVersion/JE-201/Source/RE201modelNew/dependancies/: FirFilter.h  OnePole.h  wdftonestack.h
cmake/: defaults.cmake  platform-specific.cmake
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/model/: RE201.cpp  RE201.h
src/model/dsp/: ReverbProcessor.cpp  ReverbProcessor.h  TapeDelayProcessor.cpp  TapeDelayProcessor.h  TapeMagProcessor.cpp  TapeMagProcessor.h  ToneFilteringProcessor.cpp  ToneFilteringProcessor.h  WetDryProcessor.h
src/model/dsp/base/: AllPassFilter.h  Biquad.cpp  Biquad.h  BiquadCascade.h  CircularBuffer.cpp  CircularBuffer.h  FIRFilter.h  OnePole.h  Reverb.h  TapeMag.h  VAToneStack.h  WDFToneStack.h  WaveguideSpringReverb.cpp  WaveguideSpringReverb.h  WowFlutter.h
src/model/model/: CMakeLists.txt  RE201.h
src/model/model/dsp/: ReverbProcessor.h
src/model/model/dsp/base/: Reverb.h  WowFlutter.h
